fixed a sideways scrollbar

--- a/src/components/Aside/Aside.scss
+++ b/src/components/Aside/Aside.scss
@@ -4,7 +4,7 @@
     width: 100%;
     margin-left: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
     background-color: $fourth-color;
     color: $primary-text-color;
     transition: $slide;
